[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pr1"
dynamic = ["version"]
requires-python = ">3.11"

dependencies=[
  "numpy~=1.23",
  "pint~=0.20.1",
  "regex==2023.*",
  "uncertainties~=3.1.7"
]

[tool.setuptools_scm]
root = ".."
