[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pr1-server"
dynamic = ["version"]
requires-python = ">3.11"

dependencies=[
  "aiohttp~=3.7.4",
  "bcrypt~=3.2.2",
  "pyOpenSSL~=23.0",
  "websockets~=10.2.0",
  "zeroconf~=0.47.1"
]

[project.entry-points.console_scripts]
automancer = "pr1_server:main"

[tool.setuptools.packages.find]
include = ["pr1_server"]

[tool.setuptools_scm]
root = "../.."
