[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pr1-adaptyv-nikon"
dynamic = ["version"]
requires-python = ">3.11"

dependencies=[
  "pywin32>=306"
]

[project.entry-points."automancer.plugins"]
adaptyv_nikon = "pr1_adaptyv_nikon"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pr1_adaptyv_nikon.client" = ["*"]

[tool.setuptools_scm]
root = "../.."
