[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pr1-amf"
dynamic = ["version"]
requires-python = ">3.11"

dependencies=[
  "amf-rotary-valve~=0.1.0"
]

[project.entry-points."pr1.units"]
amf = "pr1_amf"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pr1_amf.client" = ["*"]

[tool.setuptools_scm]
root = "../.."
