[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pr1-core"
dynamic = ["version"]
requires-python = ">3.11"

[project.entry-points."pr1.units"]
amf = "pr1_amf"
devices = "pr1_devices"
do = "pr1_do"
metadata = "pr1_metadata"
name = "pr1_name"
repeat = "pr1_repeat"
segment = "pr1_segment"
sequence = "pr1_sequence"
shorthands = "pr1_shorthands"
timer = "pr1_timer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pr1_devices.client" = ["*"]
"pr1_metadata.client" = ["*"]
"pr1_name.client" = ["*"]
"pr1_repeat.client" = ["*"]
"pr1_segment.client" = ["*"]
"pr1_sequence.client" = ["*"]
"pr1_shorthands.client" = ["*"]
"pr1_state.client" = ["*"]
"pr1_timer.client" = ["*"]

[tool.setuptools_scm]
root = "../.."
