[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pr1-opcua"
dynamic = ["version"]
requires-python = ">3.11"

dependencies=[
  "asyncua==1.0.0"
]

[project.entry-points."automancer.plugins"]
opcua = "pr1_opcua"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pr1_opcua.client" = ["*"]

[tool.setuptools_scm]
root = "../.."
