[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pr1-s3"
dynamic = ["version"]
requires-python = ">3.11"

dependencies=[
  "boto3==1.26.46"
]

[project.entry-points."pr1.units"]
s3 = "pr1_s3"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pr1_s3.client" = ["*"]

[tool.setuptools_scm]
root = "../.."
